@@ -118,3 +118,9 @@ val compute_displayed_name_in_gen :
 (* Naming strategy for arguments in Prop when eliminating inductive types *)
 
 val use_h_based_elimination_names : unit -> bool
+
+(**********************************************************************)
+
+val set_mangle_names_mode : Id.t -> unit
+(** Turn on mangled names mode and with the given prefix.
+    @raise UserError if the argument is invalid as an identifier. *)
