@@ -270,6 +270,11 @@ let get_cache opt = function
   | "force" -> Some Stm.AsyncOpts.Force
   | _ -> prerr_endline ("Error: force expected after "^opt); exit 1
 
+let get_identifier opt s =
+  try Names.Id.of_string s
+  with CErrors.UserError _ ->
+    prerr_endline ("Error: valid identifier expected after option "^opt); exit 1
+
 let is_not_dash_option = function
   | Some f when String.length f > 0 && f.[0] <> '-' -> true
   | _ -> false
@@ -464,6 +469,9 @@ let parse_args arglist : coq_cmdopts * string list =
 
     |"-load-vernac-source-verbose"|"-lv" ->
       add_load_vernacular oval true (next ())
+
+    |"-mangle-names" ->
+      Namegen.set_mangle_names_mode (get_identifier opt (next ())); oval
 
     |"-print-mod-uid" ->
       let s = String.concat " " (List.map get_native_name rem) in print_endline s; exit 0
